# Audit_Table

./: .gitmodules  CMakeLists.txt
audit_tables/: CMakeLists.txt  main.cpp
audit_tables/includes/: table.h
audit_tables/src/: Table.cpp
audit_tables_v2/: CMakeLists.txt  main.cpp  rule.json
audit_tables_v2/includes/: auditor.h  table.h  tableManager.h
audit_tables_v2/scripts/: README.md  api.lua  buff_rule.lua  entity_ai.lua  item_fashion_role_type1.lua  main.lua  prototype_table.lua  table_buff_base.lua
audit_tables_v2/src/: auditor.cpp  table.cpp  tableManager.cpp
calculate_md5/src/: main.cpp
xls2xlsx_master/: CMakeLists.txt  main.cpp
xls2xlsx_worker/: main.cpp
